--- a/dtui/i18n/string.ja_JP.resx
+++ b/dtui/i18n/string.ja_JP.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CancelButton" xml:space="preserve">
+    <value>キャンセル</value>
+  </data>
   <data name="ExitButton" xml:space="preserve">
     <value>終了</value>
   </data>
   <data name="LoginButton" xml:space="preserve">
     <value>ログイン</value>
+  </data>
+  <data name="LoginCancelled" xml:space="preserve">
+    <value>ログインキャンセル済み</value>
+  </data>
+  <data name="LoginCancelledMessage" xml:space="preserve">
+    <value>ログインは正常にキャンセルされました</value>
   </data>
   <data name="LoginError" xml:space="preserve">
     <value>ログインに失敗しました</value>
